--- a/dest/style.css
+++ b/dest/style.css
@@ -49,14 +49,12 @@ div {
 	margin: 25px 20px;
 	padding: 0;
 	list-style: none;
-	border: 1px solid #333;
+	border: 1px solid #fff;
 	background: url(http://img14.3lian.com/201510/21/af398caa308168a2f8ce706dabc71934.gif) center center no-repeat;
 	background-size: 30% auto;
 	background-color: #fff;
 }
-#imgs-box canvas {
-	// background: url(http://upload.chinaz.com/weixin/2015/0519/WrmjibF7YZWhB7PEm4rjpWlibAMw0JlCU8WvkN6Sg6MtXiaric9GialcYFsogQ4RqEouJeCZQb3yyzIHARs00zKmTSA.gif) center center no-repeat;
-}
+
 #vertical-imgs {
 	background-color: #369;
 	min-height: 20px;
