--- a/dest/style.css
+++ b/dest/style.css
@@ -44,50 +44,26 @@ div {
 	padding: 0;
 	list-style: none;
 }
-#imgs-box ul li {
-	display: inline-block;
-	margin: 20px 20px;
-	padding: 0;
-	list-style: none;
-	// border: 1px solid #fff;
-	background: url(http://img14.3lian.com/201510/21/af398caa308168a2f8ce706dabc71934.gif) center center no-repeat;
-	background-size: 30% auto;
-	// background-color: #fff;
-}
-// #imgs-box ul a {
-// 	display: inline-block;
-// 	margin: 25px 20px;
-// 	padding: 0;
-// 	list-style: none;
-// 	border: 1px solid #fff;
-// 	background: url(http://img14.3lian.com/201510/21/af398caa308168a2f8ce706dabc71934.gif) center center no-repeat;
-// 	background-size: 30% auto;
-// 	background-color: #fff;
-// }
 
 #vertical-imgs {
-	// background-color: #369;
 	min-height: 20px;
 }
 #horizontal-imgs {
-	// background-color: #699;
 	min-height: 20px;
 }
 #square-imgs {
-	// background-color: #963;
 	min-height: 20px;
 }
 canvas {
-	// border: 1px solid green;
 }
 
-.vertical-img, .horizontal-img, .square-img {
+.vertical-img, 
+.horizontal-img, 
+.square-img {
 	display: inline-block;
 	margin: 25px 20px;
 	padding: 0;
-	padding-bottom: -7px;
 	list-style: none;
-	// border: 1px solid red;
 	overflow: hidden;
 	background: url(http://img14.3lian.com/201510/21/af398caa308168a2f8ce706dabc71934.gif) center center no-repeat;
 	background-size: 30% auto;
